# goto-label-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: markdown.yml  rust.yml  yaml.yml
examples/: cross_func_boundries.rs  fizzbuzz.rs  simple.rs
src/: lib.rs
